# GoldenDale

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE  README.md  generate-config.py  generate-configs.sh
client/: CMakeLists.txt  RectangleItem.cpp  RectangleItem.h  StdInc.h  main.cpp
client/render/: RenderData.cpp  RenderData.h  RenderItem.cpp  RenderItem.h  Texture.cpp  Texture.h
client/render/shader/: ShaderProgram.cpp  ShaderProgram.h  ShaderType.h  shader.cpp  shader.h
client/render/vertex/: Vertex.cpp  Vertex.h  VertexArrayObject.cpp  VertexArrayObject.h
client/render/vertex/buffer/: ElementBufferObject.cpp  ElementBufferObject.h  VertexBufferObject.cpp  VertexBufferObject.h
client/resources/: config.json  render.json  strings.json
client/resources/shaders/: fragmentShader.glsl  vertexShader.glsl
client/window/: MainWindow.cpp  MainWindow.h  Window.h
lib/: Area.h  C.h  CMakeLists.txt  ConstLoader.h  Point.cpp  Point.h  RectangleArea.cpp  RectangleArea.h  RenderConst.h  Strings.h
lib/battle/: HexGrid.cpp  HexGrid.h
lib/battle/field/: HexField.cpp  HexField.h
test/: CMakeLists.txt  PointTest.cpp  RectangleAreaTest.cpp  main.cpp
test/battle/: HexGrid.cpp
test/mock/battle/: Area.h
